      Karl Ove Hufthammer <karl@huftis.org>

    * Made current image the selected image on Open screen, if applicable.

    * Now prompts to confirm before printing.

    * Holding [Alt] while clicking 'Print' on Unix/Linux can now bring up
      a print dialog. (Defaults to KDE's 'kprinter'.)  Can be altered
      via 'altprintcommand' in ~/.tuxpaintrc.


  * New translations:
    -----------------
    * Afrikaans translation created.
      Petri Jooste <rkwjpj@puk.ac.za>

    * Belarusian translation created.
      Eugene Zelenko <greendeath@mail.ru>

    * Breton translation created.
      Korvigellou An Drouizig (Philippe) <drouizig@drouizig.org>

    * Bulgarian translation created.
      Martin Zhekov <mjekov@bginfo.net>

    * Croatian translation created.
      Nedjeljko Jedvaj <jedvaj.nedeljko@lexunit.com>

    * Georgian translation created.
      Gia Shervashidze <giasher@telenet.ge>

    * Hindi translation created.
      Ankit Malik <greatestankit@yahoo.co.in>

    * Italian documentation translation.
      Flavio Pastor <flavio.pastore@zonaitalia.it>

    * Klingon (Romanized) translation started.
      Bill Kendrick <bill@newbreedsoftware.com>

    * Korean README.txt documentation added, in both EUC-KR and UTF-8 formats.
      Mark K. Kim <tuxNO_SOLICITATIONpaint-dev@cbreak.org>

    * Serbian translation created.
      Aleksandar Jelenak <jelenak@netlinkplus.net>

    * Slovenian translation created.
      Urska Colner <urska.colner@agenda.si>,
      Ines Kovacevic <ines@agenda.si>

    * Traditional Chinese translation created.
      Song Huang <Song@ossacc.org>

    * Vietnamese translation created.  (Simple version)
      Le Quang Phan <lqphan@hn.vnn.vn>

    * Welsh translation created.
      Kevin Donnelly <kevin@dotmon.com>

  * Updated translations:
    ---------------------
    * Updated Basque translation.
      Juan Irigoien <juanirigoien@irakasle.net>

    * Updated Brazilian Portuguese translation.