@@ -807,6 +807,25 @@ New Breed Software</p>
 	  <p>See the "<a href="OPTIONS.html"><i>Options</i></a>"
 	  documentation.)</p>
 	</dd>
+
+	<dt>Printer Dialog Options</dt>
+	<dd>
+	  <p>By default, Tux&nbsp;Paint only shows the printer dialog
+	  (or, on Linux/Unix, runs the "altprintcommand", e.g.,
+	  "kprinter" instead of "lpr") if the <b>[Alt]</b> key is held
+	  while clicking the 'Print' button.</p>
+
+	  <p>However, this behavior can be changed.  You can have the
+	  printer dialog always appear by using
+	  "<code>--altprintalways</code>" on the command-line, or
+	  "<code>altprint=always</code>" in Tux&nbsp;Paint's configuration
+	  file.  Or, you can prevent the <b>[Alt]</b> key from having any
+	  effect by using "<code>--altprintnever</code>", or
+	  "<code>altprint=never</code>".</p>
+	  
+	  <p>See the "<a href="OPTIONS.html"><i>Options</i></a>"
+	  documentation.)</p>
+	</dd>
 	
 	</dl>
         <br clear=all>
