@@ -395,6 +395,15 @@ http://www.newbreedsoftware.com/tuxpaint/
       a print dialog. (Defaults to KDE's 'kprinter'.)  Can be altered
       via 'altprintcommand' in ~/.tuxpaintrc.
 
+    * Printer dialog (and 'altprintcommand') can be forced to come up
+      all the time (not just when [Alt] is held) via a new
+      "--altprintalways" command-line option (and "altprint=always" config.
+      file option).
+
+    * Similarly, printer dialog can be prevented ([Alt] key has no effect)
+      via a new "--altprintnever" option (and "altprint=never").
+      (Default (where [Alt] must be held to show dialog) is "altprintmod".)
+
 
   * New translations:
     -----------------
